# RythonEngine

./: .editorconfig  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SPEC.md  TEST_GAME.md  pyproject.toml
.claude/: remake_agent.py  settings.json
.github/workflows/: audit.yml  ci.yml
.spec/: alpha-blending.spec.md  audio.md  bloom-hdr.spec.md  deferred-rendering.spec.md  ecs.md  emissive-materials.spec.md  errors.md  fog-atmosphere.spec.md  input.md  instanced-rendering.spec.md  lod.spec.md  material-properties.spec.md  module-loader.md  multiple-lights.spec.md  normal-mapping.spec.md  parallax-mapping.spec.md  pbr.spec.md  phase-1-skeleton-viewport.md  phase-2-scene-editing.md  phase-3-gizmos-assets.md  phase-4-ui-scripts.md  phase-5-polish.md  physics.md  post-processing.spec.md  renderer.md  resources.md  rim-lighting.spec.md  scripting.md  shadow-mapping.spec.md  skybox-cubemap.spec.md  specular-mapping.spec.md  ssao.spec.md  ssr.spec.md  tangent-space-normals.spec.md  task-scheduler.md  threading.md  ui.md  wireframe-mode.spec.md
crates/rython-audio/: Cargo.toml
crates/rython-audio/src/: lib.rs
crates/rython-audio/tests/: config.rs  playback.rs
crates/rython-cli/: Cargo.toml  build.rs
crates/rython-cli/src/: main.rs  release_seal.rs
crates/rython-core/: Cargo.toml
crates/rython-core/src/: components.rs  config.rs  errors.rs  events.rs  lib.rs  math.rs  project.rs  scheduler_trait.rs  types.rs
crates/rython-core/tests/: acceptance.rs
crates/rython-ecs/: Cargo.toml
crates/rython-ecs/src/: command.rs  component.rs  entity.rs  event_bus.rs  hierarchy.rs  lib.rs  scene.rs  tests.rs
crates/rython-ecs/src/systems/: light.rs  mod.rs  render.rs  transform.rs
crates/rython-editor/: Cargo.toml
crates/rython-editor/src/: app.rs  lib.rs  main.rs
crates/rython-editor/src/panels/: asset_browser.rs  component_inspector.rs  console.rs  mod.rs  scene_hierarchy.rs  script_panel.rs  ui_editor.rs  viewport_panel.rs  welcome.rs
crates/rython-editor/src/project/: format.rs  io.rs  mod.rs  scaffold.rs
crates/rython-editor/src/state/: clipboard.rs  mod.rs  preferences.rs  project.rs  selection.rs  undo.rs  viewport.rs
crates/rython-editor/src/viewport/: camera_controller.rs  gizmo.rs  mod.rs  offscreen.rs  picking.rs
crates/rython-editor/tests/: integration.rs
crates/rython-engine/: Cargo.toml
crates/rython-engine/src/: builder.rs  lib.rs
crates/rython-engine/tests/: spec_tests.rs
crates/rython-input/: Cargo.toml
crates/rython-input/src/: action.rs  binding.rs  bitset.rs  context.rs  controller.rs  events.rs  input_map.rs  lib.rs  modifier.rs  snapshot.rs  trigger.rs  value.rs
crates/rython-input/tests/: acceptance.rs
crates/rython-modules/: Cargo.toml
crates/rython-modules/src/: lib.rs  loader.rs  module.rs  registry.rs  state.rs
crates/rython-modules/tests/: acceptance.rs
crates/rython-physics/: Cargo.toml
crates/rython-physics/src/: lib.rs
crates/rython-physics/tests/: body_api.rs  collision_shapes.rs  config.rs
crates/rython-renderer/: Cargo.toml
crates/rython-renderer/src/: camera.rs  command.rs  config.rs  gpu.rs  lib.rs  light.rs  queue.rs  shaders.rs  shadow.rs
crates/rython-renderer/tests/: acceptance.rs
crates/rython-resources/: Cargo.toml
crates/rython-resources/src/: lib.rs  tangents.rs
crates/rython-resources/tests/: loading.rs  mesh.rs
crates/rython-scheduler/: Cargo.toml
crates/rython-scheduler/src/: frame_pacer.rs  group.rs  lib.rs  scheduler.rs  task.rs
crates/rython-scheduler/tests/: acceptance.rs
crates/rython-scripting/: Cargo.toml
crates/rython-scripting/src/: bridge.rs  component.rs  config.rs  lib.rs  system.rs
crates/rython-scripting/src/bridge/: audio.rs  camera.rs  engine.rs  entity.rs  input.rs  input_map.rs  job_handle.rs  mod.rs  physics.rs  renderer.rs  resources.rs  scene.rs  scheduler.rs  task.rs  time.rs  types.rs  ui.rs
crates/rython-scripting/tests/: acceptance.rs
crates/rython-ui/: Cargo.toml
crates/rython-ui/src/: animator.rs  commands.rs  lib.rs  manager.rs  theme.rs  widget.rs
crates/rython-window/: Cargo.toml
crates/rython-window/src/: lib.rs  raw_events.rs  tests.rs  window_module.rs
docs/engine/: README.md
docs/game/: README.md
game/: CREDITS.md  __init__.py  project.json
game/assets/models/: DOWNLOAD_README.md
game/scenes/: arena_1.json  arena_2.json  arena_3.json
game/scripts/: __init__.py  camera_follow.py  enemies.py  game_state.py  level_builder.py  main.py  player.py  ui_loader.py
game/scripts/levels/: __init__.py  arena_1.py  arena_2.py  arena_3.py
game/scripts/menus/: __init__.py  hud.py  main_menu.py  pause_menu.py  settings_menu.py
game/scripts/npc/: __init__.py  skeleton.py
game/ui/: main_menu.json  pause_menu.json  settings_menu.json
rython/: __init__.py  _audio.py  _camera.py  _decorators.py  _engine.py  _entity.py  _input.py  _physics.py  _renderer.py  _resources.py  _scene.py  _scheduler.py  _stubs.py  _time.py  _types.py  _ui.py
rython/input/: __init__.py  default.py
scripts/: _common.py  bootstrap_target.py  bundle.py  package.py  python_standalone_pins.json
scripts/tests/: test_bundle.py
tests/: bridge_subsystem_test.py  test_decorators.py  test_stubs.py  visual_spinning_cubes.py
tests/python/: _harness.py  run_tests.py  test_audio.py  test_camera.py  test_entity.py  test_input.py  test_physics.py  test_renderer.py  test_resources.py  test_scene.py  test_scheduler.py  test_scheduler_tasks.py  test_throttle.py  test_time.py  test_types.py  test_ui.py
