[workspace]
members = [
    "crates/rython-core",
    "crates/rython-scheduler",
    "crates/rython-modules",
    "crates/rython-ecs",
    "crates/rython-window",
    "crates/rython-input",
    "crates/rython-renderer",
    "crates/rython-physics",
    "crates/rython-audio",
    "crates/rython-resources",
    "crates/rython-ui",
    "crates/rython-scripting",
    "crates/rython-engine",
    "crates/rython-cli",
    "crates/rython-editor",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"

[workspace.dependencies]
# Layer 0
rython-core = { path = "crates/rython-core" }
# Layer 1
rython-scheduler = { path = "crates/rython-scheduler" }
rython-modules = { path = "crates/rython-modules" }
# Layer 2
rython-ecs = { path = "crates/rython-ecs" }
rython-window = { path = "crates/rython-window" }
rython-input = { path = "crates/rython-input" }
rython-renderer = { path = "crates/rython-renderer" }
rython-physics = { path = "crates/rython-physics" }
rython-audio = { path = "crates/rython-audio" }
rython-resources = { path = "crates/rython-resources" }
# Layer 3
rython-ui = { path = "crates/rython-ui" }
rython-scripting = { path = "crates/rython-scripting" }
# Binary
rython-engine = { path = "crates/rython-engine" }

# External
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.29", features = ["serde", "bytemuck"] }
crossbeam-channel = "0.5"
rayon = "1"
parking_lot = "0.12"
downcast-rs = "1"
toml = "0.8"
kira = { version = "0.8", default-features = false, features = ["cpal", "wav", "ogg", "flac", "mp3"] }
winit = "0.30"
gilrs = "0.10"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
gltf = "1"
fontdue = "0.8"
hound = "3"
rapier3d = { version = "0.22", features = ["simd-stable"] }
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
egui_dock = "0.18"
rfd = "0.15"
