[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rython"
version = "0.1.1"
description = "Pure-Python stub package for rython engine IDE support (Pylance/pyright)"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["rython*"]

[tool.setuptools.package-data]
rython = ["py.typed"]
