[package]
name = "rython-audio"
version.workspace = true
edition.workspace = true

[dependencies]
rython-core.workspace = true
rython-modules.workspace = true
thiserror.workspace = true
serde.workspace = true
kira.workspace = true

[dev-dependencies]
rython-core.workspace = true
serde_json.workspace = true
