[package]
name = "rython-ecs"
version.workspace = true
edition.workspace = true

[dependencies]
rython-core.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
downcast-rs.workspace = true

[dev-dependencies]
serde_json.workspace = true
