[package]
name = "rython-editor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rython-editor"
path = "src/main.rs"

[dependencies]
rython-core.workspace = true
rython-ecs.workspace = true
rython-renderer.workspace = true
rython-resources.workspace = true
rython-ui.workspace = true

egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_dock.workspace = true
eframe.workspace = true

winit.workspace = true
wgpu.workspace = true

serde.workspace = true
serde_json.workspace = true
glam.workspace = true
log.workspace = true
env_logger.workspace = true
parking_lot.workspace = true
rfd.workspace = true
bytemuck.workspace = true
