[package]
name = "rython-physics"
version.workspace = true
edition.workspace = true

[dependencies]
rython-core.workspace = true
rython-scheduler.workspace = true
rython-modules.workspace = true
rython-ecs.workspace = true
rapier3d.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
