[package]
name = "rython-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
rython-core.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
glam.workspace = true
fontdue.workspace = true
image.workspace = true

[dev-dependencies]
pollster = "0.3"
env_logger.workspace = true
