[package]
name = "rython-resources"
version.workspace = true
edition.workspace = true

[dependencies]
rython-core.workspace = true
rython-modules.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
rayon.workspace = true
image.workspace = true
gltf.workspace = true
fontdue.workspace = true
hound.workspace = true
bytemuck.workspace = true
log.workspace = true
